frame/support/test/tests/construct_runtime_ui/old_unsupported_pallet_decl.stderr
error[E0433]: failed to resolve: could not find `tt_default_parts` in `pallet_old`
  --> tests/construct_runtime_ui/old_unsupported_pallet_decl.rs:15:1
   |
15 | / construct_runtime! {
16 | |     pub struct Runtime where
17 | |         UncheckedExtrinsic = UncheckedExtrinsic,
18 | |         Block = Block,
...  |
23 | |     }
24 | | }
   | |_^ could not find `tt_default_parts` in `pallet_old`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot find macro `decl_storage` in this scope
 --> tests/construct_runtime_ui/old_unsupported_pallet_decl.rs:6:2
  |
6 |     decl_storage! {
  |     ^^^^^^^^^^^^
  |
  = help: consider importing this macro:
          frame_support::decl_storage

error: cannot find macro `decl_module` in this scope
  --> tests/construct_runtime_ui/old_unsupported_pallet_decl.rs:10:2
   |
10 |     decl_module! {
   |     ^^^^^^^^^^^
   |
   = help: consider importing this macro:
           frame_support::decl_module
